--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,4 @@
 <div class="links scroll">
-        <!--<a href="{{site.baseurl}}/">Home</a>-->
+        <a href="{{site.baseurl}}/">Home</a>
+        <a href="{{site.baseurl}}/">CV</a>
 </div>
